<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="240dp"
    android:background="#000"
    android:layout_height="wrap_content">
    <TextView
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18dp"
        android:background="@drawable/title"
        android:text="@string/select_lv"/>
    <Button
        android:id="@+id/btn_lv1"
        android:text="@string/lv1"
        android:textColor="#fff"
        android:textSize="16dp"
        android:background="@drawable/btn2"
        android:layout_marginTop="4dp"

        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <Button
        android:id="@+id/btn_lv2"
        android:text="@string/lv2"
        android:textColor="#fff"
        android:textSize="16dp"
        android:background="@drawable/btn2"
        android:layout_marginTop="4dp"

        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <Button
        android:id="@+id/btn_lv3"
        android:text="@string/lv3"
        android:textColor="#fff"
        android:textSize="16dp"
        android:background="@drawable/btn2"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"

        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>