<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_ll"
    android:layout_width="240dp"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#424242"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_margin="2dp"
        android:background="@drawable/title"
        android:textColor="#fff"
        android:text="@string/about_title"/>
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/about_content"
            android:textColor="#FFF" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_mail_black_24dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="fill_parent"
                android:text="@string/mail"
                android:textColor="#FFF" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_local_phone_black_24dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="fill_parent"
                android:text="@string/phone"
                android:textColor="#FFF" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_local_address"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="60dp"
                android:text="@string/address"
                android:textColor="#FFF" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>