<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="#000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_back"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/title"
        android:gravity="center"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_margin="2dp"
        android:text="@string/do_you_want_exit"
        android:textColor="#fff"
        android:textSize="16dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn3"
            android:text="@string/no"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/btn4"
            android:text="@string/yes"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>