<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_back"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="2dp"
        android:background="@drawable/title"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/statistical"
        android:textColor="#fff"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="#37474F"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#424242"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/level"
            android:textColor="#fff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_match"
            android:textColor="#fff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/win"
            android:textColor="#fff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lose"
            android:textColor="#fff" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#37474F"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFF3E0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/lv1"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_total_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Total"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_win_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Win"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_lose_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Lose"
            android:textColor="#000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#37474F"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFF3E0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/lv2"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_total_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Total"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_win_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Win"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_lose_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
android:gravity="center"
            android:text="Lose"
            android:textColor="#000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#37474F"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFF3E0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/lv3"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_total_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Total"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_win_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Win"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txt_lose_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Lose"
            android:textColor="#000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#37474F"></View>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="#37474F"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#424242"
        android:gravity="center"
        android:text="@string/detail"
        android:textColor="#fff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#37474F"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#E6EE9C"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:text="@string/time"
            android:textColor="#000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/level"
            android:textColor="#000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/result"
            android:textColor="#000" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#37474F"></View>

    <ListView
        android:id="@+id/lv_statistical"
        android:layout_width="match_parent"
        android:layout_height="170dp"></ListView>

    <ImageButton
        android:id="@+id/exit_sta"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@color/colorBtn"
        android:scaleType="fitCenter"
        android:src="@drawable/exit_ic" />

</LinearLayout>